--- a/index.htm
+++ b/index.htm
@@ -80,7 +80,7 @@ h1 {
 			</div>
 		<div class="lower">
 			<center>	
-		<a href="https://blog.soundbodyway.com" class="button10">Welcome to our BLOG</a>
+		<a href="https://maxbasev.com" class="button10">Welcome to MY BLOG</a>
 			</center>
 		</div>
 		</div>
