--- a/index.htm
+++ b/index.htm
@@ -69,7 +69,7 @@ h1 {
   overflow:hidden;
 }
 
-<link rel="shortcut icon" href="/public_html/img/favicon.png" type="image/png">
+<link rel="shortcut icon" href="/img/favicon.png" type="image/png">
 </style>
 </head>
 	<body>
