--- a/index.htm
+++ b/index.htm
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>Sound Body Way</title>
+<title>MaxBasev blog</title>
 <style type="text/css">
 body {
   background:#ffffff
@@ -40,7 +40,7 @@ a.button10 {
   outline: none;
   border: 1px solid rgb(0,0,0);
   border-radius: 7px;
-  background: rgb(43,99,239) linear-gradient(rgb(43,99,239), rgb(52,170,108));
+  background: rgb(120,0,255) linear-gradient(rgb(120,0,255), rgb(245,104,84));
   box-shadow: inset 0 -2px 1px rgba(0,0,0,0), inset 0 1px 2px rgba(0,0,0,0), inset 0 0 0 60px rgba(255,255,0,0);
   transition: box-shadow .2s, border-color .2s;
 } 
